--- a/.github/workflows/deploy-fixed.yml
+++ b/.github/workflows/deploy-fixed.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Jekyll Site
+name: Build and Deploy Jekyll Site (Fixed)
 
 on:
   push:
@@ -30,11 +30,20 @@ jobs:
       - name: Install ImageMagick
         run: sudo apt-get update && sudo apt-get install -y imagemagick
 
-      - name: Install Python and Jupyter
+      - name: Setup Python and Jupyter
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-      - run: pip install jupyter nbconvert
+          python-version: '3.10'
+      - run: |
+          python -m pip install --upgrade pip
+          pip install jupyter nbconvert
+          echo "Jupyter location: $(which jupyter)"
+          jupyter --version
+
+      - name: Temporarily disable problematic plugins
+        run: |
+          sed -i 's/jekyll-jupyter-notebook/#jekyll-jupyter-notebook/g' _config.yml
+          cat _config.yml | grep -A 5 -B 5 jupyter
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
