--- a/_config.yml
+++ b/_config.yml
@@ -275,7 +275,7 @@ sass:
 # -----------------------------------------------------------------------------
 
 jekyll-minifier:
-  exclude: ["robots.txt", "assets/js/search/*.js", "assets/libs/**/*"]
+  exclude: ["robots.txt", "assets/js/search/*.js", "assets/libs/**/*", '*.js']
   uglifier_args:
     harmony: true
 
