--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -41,12 +41,13 @@ jobs:
             sed -i 's/{% toc %}/{% comment %}{% toc %}{% endcomment %}/g' _layouts/post.liquid
           fi
       
-      - name: Disable JavaScript minification
+      - name: Enable ES6 harmony mode in Jekyll minifier
         run: |
           echo "" >> _config.yml
-          echo "# Disable JavaScript compression with Uglifier" >> _config.yml
+          echo "# Enable ES6 harmony mode in minifier" >> _config.yml
           echo "jekyll-minifier:" >> _config.yml
-          echo "  exclude: [\"**/*.js\"]" >> _config.yml
+          echo "  javascript:" >> _config.yml
+          echo "    harmony: true" >> _config.yml
       
       - name: Install Jekyll and dependencies
         run: |
