--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ collections:
 announcements:
   enabled: true
   scrollable: true # adds a vertical scroll bar if there are more than 3 news items
-  limit: 10 # leave blank to include all the news in the `_news` folder
+  limit: 10 # shows only the 10 most recent news items
 
 latest_posts:
   enabled: false
